feat: config api getway and test